--- a/satyam_hospital/satyam.html
+++ b/satyam_hospital/satyam.html
@@ -322,7 +322,7 @@
     <!-- Sidebar -->
     <div id="sidebar" role="navigation" aria-label="Sidebar menu">
       <img
-        src="/SATYAM LOGO.png"
+        src="../SATYAM LOGO.png"
         alt="Satyam Hospital Logo"
         class="sidebar-logo"
       />
